--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        object-fit: contain;
+        object-fit: cover;
         z-index: 1;
       }
 
@@ -96,7 +96,7 @@
       }
 
       .hero-subtitle {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         max-width: 600px;
         margin: 0 auto;
         text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -357,5 +357,6 @@
     </script>
   </body>
 </html>
+
 
 
