--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         align-items: center;
         justify-content: center;
         padding: 16px 32px;
-        background: #25d366;
-        color: white;
+        background: rgb(236, 252, 17;
+        color: #0f0e17;
         text-decoration: none;
         font-weight: 600;
         font-size: 1.2rem;
@@ -274,7 +274,8 @@
       </div>
       <div class="whatsapp-section">
         <a href="https://wa.me/message/S5ZKJPIU4AUCG1" class="whatsapp-btn">
-          <i class="fab fa-whatsapp"></i> GET MY WIG NOW!! (click)
+          <p><b>GET MY WIG NOW 👆🏾 </b>
+          </p>
         </a>
       </div>
 
@@ -357,6 +358,7 @@
     </script>
   </body>
 </html>
+
 
 
 
