--- a/index.html
+++ b/index.html
@@ -163,25 +163,26 @@
         align-items: center;
         justify-content: center;
         padding: 16px 32px;
-        background: rgb(236, 252, 17;
+        background: rgb(236, 252, 17);
         color: #0f0e17;
         text-decoration: none;
         font-weight: 600;
         font-size: 1.2rem;
         border-radius: 50px;
-        box-shadow: 0 5px 15px rgba(37, 211, 102, 0.3);
+        box-shadow: 0 5px 15px rgba(11, 1, 46, 0.3);
         transition: all 0.3s ease;
       }
 
       .whatsapp-btn:hover {
         transform: translateY(-3px);
-        box-shadow: 0 8px 20px rgba(37, 211, 102, 0.4);
-        background: #20bd5c;
+        box-shadow: 0 8px 20px rgba(18, 1, 48, 0.4);
+        background: white;
       }
 
       .whatsapp-btn i {
         margin-right: 10px;
         font-size: 1.5rem;
+        color: #0000;
       }
 
       .video-section {
@@ -358,6 +359,7 @@
     </script>
   </body>
 </html>
+
 
 
 
